# Semantic-diff-KV-cache-RAG

./: README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: divergence.py
docs/: index.html
results/: qwen2.5-0.5b.json
space/: README.md  app.py  requirements.txt
src/semantic_kv/: __init__.py  cache.py  chunking.py  embeddings.py  kv_store.py  metrics.py  pipeline.py  rope.py  vectorstore.py
tests/: conftest.py  test_cache.py  test_equivalence.py  test_rope.py
